# chezzibot

./: .dockerignore  Dockerfile  LICENSE  README.md  bot.py  compose.yml  config.py  log.py  logger.py  main.py  pyproject.toml  requirements.txt  tmp.txt
assets/jsons/: sokoban.json
cogs/: events.py  help.py
cogs/audio/: __init__.py  fifteenai.py
cogs/economy/: __init__.py
cogs/games/: __init__.py  rps.py  sokoban.py  tictactoe.py  tictactoe5.py
cogs/media/: __init__.py  caption.py  topbottom.py
cogs/utilities/: __init__.py
utils/: __init__.py  argument_cast.py  ffmpeg_audio.py  get_attachment.py  image_text.py  message_utils.py  pagination.py  safe_message.py  timeout.py
